crates/plotnik-tests/tests/02-parser/recovery_validation/unnamed_def_between_named_defs.txt
(first)
Expr = (identifier)
(last)
------------------ DIAGNOSTICS -------------------
error: definition must be named
 --> query.ptk:1:1
  |
1 | (first)
  | ^^^^^^^
  |
help: add a PascalCase definition name and `=` before `(first)`

error: definition must be named
 --> query.ptk:3:1
  |
3 | (last)
  | ^^^^^^
  |
help: add a PascalCase definition name and `=` before `(last)`
